2008-02-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #7244: bug in the recipient list "from other recipient list"
	* Fixed bug #7127: wrong SQL "sort by" at calculating statistics 
	* Fixed bug #7296: the listed SysFolder is filtered by the page access

2008-02-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #7100: back button.

2008-01-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added the options not to encode the headers if sending with SMTP.
	* manual updates

2007-12-28 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #5111: List of categories PID is correctly quoted.
	
2007-12-28 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Added: Support sending direct mail with SMTP (needs PEAR:mail class). Manual updated. Thanks to Benjamin Mack.
	* Fixed: in send Wizard: if only warning, next button will be enabled
	* Fixed bug #6904, #6905: in recipient list import module: check if some array (categories array) are empty (during import process)

2007-10-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Added: Hooks in the recipient lists (cmd_displayImport and doImport)

2007-10-26 Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fixed: delete lock file if DB connect failed

2007-10-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added: Imported tt_address can be assigned to categories and have HTML-flag by default

2007-10-11 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #6484: HTML parameter set in configuration is not applied
	* Fixed bug #5812: remove white spaces in recipient's name

2007-09-19 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #5413: problem by fetching plaintext

2007-09-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fix bug #4661: convert the charset of the USER markers
	* Fix bug #6297: trimming the "name" field before set it as recipient

2007-08-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fix bug #6026: in plaintext base URL is not shown if there's no image
	* Fix bug #6027: corrected JOIN statement in tx_directmail_static::getIdList